# madgen.github.io

./: .gitignore  CNAME  LICENSE  README.md  archive.html  atom.xml  do-disturb-me.cabal  index.html  publish.sh  site.hs  teaching.html  teaching.markdown
bib/: bib.bib
css/: default.css
example-sheets/: Compiler-Construction-I.html  Compiler-Construction-I.markdown  Compiler-Construction-I.tex  Compiler-Construction-II.html  Compiler-Construction-II.tex  Compiler-Construction-III.html  Compiler-Construction-III.tex  Compiler-Construction-IV.html  Compiler-Construction-IV.tex  Concepts-in-Programming-Languages-I.html  Concepts-in-Programming-Languages-I.tex  Concepts-in-Programming-Languages-II.html  Concepts-in-Programming-Languages-II.tex  Hoare-Logic-and-Model-Checking-I.html  Hoare-Logic-and-Model-Checking-I.markdown  Hoare-Logic-and-Model-Checking-II.html  Hoare-Logic-and-Model-Checking-II.markdown  Hoare-Logic-and-Model-Checking-III.html  Hoare-Logic-and-Model-Checking-III.markdown  Logic-and-Proof-I.html  Logic-and-Proof-I.markdown  Logic-and-Proof-II.html  Logic-and-Proof-II.markdown  Logic-and-Proof-III.html  Logic-and-Proof-III.markdown  Prolog-I.html  Prolog-I.markdown  Prolog-II.html  Prolog-II.markdown
posts/: 2015-08-23-example.html  2018-01-08-Cellular-Christmas-Tree.markdown  2018-01-08-Comonadic-Cellular-Christmas-Tree.markdown  2018-01-28-Cellular-Christmas-Tree.html  2018-01-28-Cellular-Christmas-Tree.markdown  2018-06-19-GADT-a-la-Jane-Street-in-Haskell.html  2018-09-28-Automatic-Subgoal-Scheduling-for-Datalog.html  2018-09-28-Automatic-Subgoal-Scheduling-for-Datalog.markdown  2018-10-08-Automatic-Subgoal-Scheduling-for-Datalog.html  2018-10-08-Automatic-Subgoal-Scheduling-for-Datalog.markdown  2018-12-22-The-Essence-of-Datalog.markdown  Fur-Rebecca.html  (+16 more)
(+4 files in other folders)
